--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,7 @@
                                                                media queries
 
                                                                animations
-
-                                                 
-
-                                                            =================*/
+                                                   ========================================*/
 
 :root {
     --clr-primary: #3282a1;
@@ -25,15 +22,34 @@
     --clr-links: lightskyblue;
     --clr-content-bg: rgb(33, 33, 33);
     --clr-background: rgb(15, 15, 15);
-
-    /* second color scheme */
+    --clr-text: white;
+    --linear-gradient: linear-gradient(
+        rgba(0, 0, 0, 0.884),
+        rgba(10, 10, 10, 0.877)
+    );
+    /* other color scheme */
     /* --clr-primary: #bea0d3;
     --clr-accent: #229ccc;
     --clr-nav: #201925;
     --clr-highlight: lightgoldenrodyellow;
     --clr-links: #61baad;
-    --clr-content-bg: rgb(33,33,33);
-    --clr-background: rgb(15,15,15); */
+    --clr-content-bg: rgb(33, 33, 33);
+    --clr-background: rgb(15, 15, 15); */
+}
+
+.lightmode {
+    --clr-primary: #3282a1;
+    --clr-accent: #229ccc;
+    --clr-nav: #229ccc;
+    --clr-highlight: rgb(34, 34, 34);
+    --clr-links: #ffffff;
+    --clr-content-bg: rgb(255, 255, 255);
+    --clr-background: rgb(206, 206, 206);
+    --clr-text: rgb(14, 14, 14);
+    --linear-gradient: linear-gradient(
+        rgba(255, 255, 255, 0.712),
+        rgba(255, 255, 255, 0.877)
+    );
 }
 
 html {
@@ -107,21 +123,17 @@ blockquote {
 /* header
 ------------------------------------------*/
 .grid-container__header {
-    background: var(--clr-background);
-    /* background: linear-gradient(
-        rgba(0, 0, 0, 0.712),
-        rgba(10, 10, 10, 0.877)
-    ),
-    url(images/carbonfiber.png);
+    /* background: var(--clr-background); */
+    background: var(--linear-gradient), url(images/carbonfiber.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed; */
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
 }
 
-/* main content - this is grid item that holds the navbar / sidebar / main article 
+/* main content - this is the grid item / flex container that holds the navbar and grid for sidebar / main article 
 -----------------------------------------------------------------------------------*/
 .grid-container__main-content {
     background: var(--clr-background);
@@ -131,7 +143,7 @@ blockquote {
     /* justify-content:center; */
     align-items: center;
     /* this makes all the text white */
-    color: white;
+    color: var(--clr-text);
     /* background: linear-gradient(
         rgba(0, 0, 0, 0.904),
         rgba(10, 10, 10, 0.925)
@@ -157,6 +169,7 @@ this is the inner grid that holds the main article and sidebar
             200px,
             250px
         );
+
     grid-template-rows: 1fr;
     grid-template-areas: ". a s";
     /* background:var(--clr-dark); */
@@ -231,16 +244,11 @@ this is the inner grid that holds the main article and sidebar
 }
 
 /* these are the IDs for the theme/mode icon */
-#modeToggleDesktop {
+#modeToggle {
     color: var(--clr-links);
     cursor: pointer;
     transition: 1s;
 }
-/* 
-#modeToggleDesktop.light-theme {
-    color: var(--clr-highlight);
-    transform: rotate(180deg);
-} */
 
 .navbar__ul a {
     color: var(--clr-links);
@@ -276,7 +284,7 @@ this is the inner grid that holds the main article and sidebar
 .sidebar-wrap {
     position: sticky;
     top: 0;
-    background: rgba(33, 33, 33, 0.5);
+    background: var(--clr-content-bg);
     padding: 0.5em;
     border-radius: 5px;
 }
@@ -359,12 +367,12 @@ this is the inner grid that holds the main article and sidebar
 /* this is the read more button that expands the newest post if clicked */
 #newest-post__button {
     cursor: pointer;
-    border: solid var(--clr-links) 2px;
+    border: solid var(--clr-accent) 2px;
     text-align: center;
     padding: 0.5em;
     border-radius: 999px;
     text-decoration: none;
-    color: var(--clr-links);
+    color: var(--clr-accent);
     transition: 0.25s;
     display: flex;
     justify-content: center;
@@ -373,7 +381,7 @@ this is the inner grid that holds the main article and sidebar
 }
 
 #newest-post__button:hover {
-    color: var(--clr-nav);
+    color: var(--clr-links);
     border: solid var(--clr-primary);
     background: var(--clr-primary);
 }
@@ -381,12 +389,12 @@ this is the inner grid that holds the main article and sidebar
 /* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
 #backToTop {
     cursor: pointer;
-    border: solid var(--clr-links) 2px;
+    border: solid var(--clr-accent) 2px;
     text-align: center;
     padding: 0.5em;
     border-radius: 999px;
     text-decoration: none;
-    color: var(--clr-links);
+    color: var(--clr-accent);
     transition: 0.25s;
     display: none;
     justify-content: center;
@@ -395,7 +403,7 @@ this is the inner grid that holds the main article and sidebar
 }
 
 #backToTop:hover {
-    color: var(--clr-nav);
+    color: var(--clr-links);
     border: solid var(--clr-primary);
     background: var(--clr-primary);
 }
@@ -433,6 +441,7 @@ i:hover {
                                             MEDIA QUERIES
                                         ////////////////// */
 
+/* this media query switches the main content grid to two columns instead of 3 */
 @media only screen and (max-width: 1200px) {
     .main-content__grid {
         display: grid;
@@ -443,6 +452,7 @@ i:hover {
 }
 
 @media only screen and (max-width: 900px) {
+    /* this switches the main content grid to s single column with the sidebar underneath the main content  */
     .main-content__grid {
         display: grid;
         grid-template-columns: 1fr;
@@ -480,7 +490,6 @@ i:hover {
 
     .sidebar__h3 {
         /* color:var(--clr-accent); */
-
         text-align: center;
         padding: 1em 0 0 0;
         font-size: 2.6rem;
